RESOLVED FIXED173856
[iOS DnD] [WK2] WKWebView does not handle drag sessions that exit and re-enter
https://bugs.webkit.org/show_bug.cgi?id=173856
Summary [iOS DnD] [WK2] WKWebView does not handle drag sessions that exit and re-enter
Wenson Hsieh
Reported 2017-06-26 17:53:08 PDT
Upon exiting a WKContentView, the dropSession is not cleared out. If the drag session re-enters the WKWebView, a *different* UIDropSession is sent to the drop delegate, causing us to bail in -dropInteraction:canHandleSession: and not handle the drag. To fix this, we need to clear out dropSession when the drag session exits the view.
Attachments
Patch (1.98 KB, patch)
2017-06-26 19:13 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2017-06-26 19:09:21 PDT
Wenson Hsieh
Comment 2 2017-06-26 19:13:44 PDT
WebKit Commit Bot
Comment 3 2017-06-27 07:49:24 PDT
Comment on attachment 313886 [details] Patch Clearing flags on attachment: 313886 Committed r218834: <http://trac.webkit.org/changeset/218834>
WebKit Commit Bot
Comment 4 2017-06-27 07:49:25 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.